--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -24,7 +24,7 @@ $navbar-height: 80px;
   display: flex;
   align-items: center;
 
-  @include media-breakpoint-down(sm){
+  @include media-breakpoint-down(xs){
     display: none;
 
     &.show{
