--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,7 +5,7 @@
 $white:    #fff;
 $black:    #000;
 
-$color-palette: 'fashion-2';
+$color-palette: 'fashion-1';
 
 $theme-colors: (
   success: #40be65,
